--- a/MyApp/src/app/app.component.html
+++ b/MyApp/src/app/app.component.html
@@ -1,1 +1,5 @@
-<router-outlet></router-outlet>
+<!--<router-outlet></router-outlet>
+
+<app-engg-home></app-engg-home>
+-->
+<app-accept-complaint></app-accept-complaint>
