--- a/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
+++ b/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
@@ -73,16 +73,15 @@
                     <h2 style="color: #337ab7;">Complaint Details </h2>
                     <button type="button" class="close" data-dismiss="modal">&times;</button>
                 </div>
-                <div class='row' style="margin-top: 15px;">
+                <!--  <div class='row' style="margin-top: 15px;">
                     <div class='col-md-3' style="margin-left: 20px;margin-top: 5px; font-size: medium;"><b>Search Engineer</b>
                     </div>
                     <div class='col-md-8'>
                         <input style="margin-bottom: 17px;" class="form-control" type="text" name="search" [(ngModel)]="searchText1" autocomplete="off" />
                     </div>
                 </div>
-
+-->
                 <div class="modal-body">
-                    <!-- *ngFor="let item of serviceEnggData | filter:searchText1" -->
                     <div class="alert alert-success fade show">
 
                         <div class="row" style="margin-top:8px">
@@ -193,7 +192,7 @@
                                 <label style="margin-top:12px"><b>Comments:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email " class="form-control " id="Email " disabled>
+                                <input type="text" name="Email " class="form-control " id="Email ">
 
                             </div>
 
