--- a/MyApp/src/app/component/CUSTOMERS/view-customer/view-customer.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/view-customer/view-customer.component.html
@@ -66,6 +66,7 @@
                         <h6>Confirm Password:</h6>
                         <p>{{iteam.u_cpassword}}</p>
                     </div>
+                    <button class="btn btn-primary" (click)="back()"><i class="fa fa-arrow-left"></i>Back</button> 
                 </div>
             </div>
         </div>
