--- a/MyApp/src/app/component/SERVICE-ENGG/service-engg-edit/service-engg-edit.component.html
+++ b/MyApp/src/app/component/SERVICE-ENGG/service-engg-edit/service-engg-edit.component.html
@@ -75,7 +75,7 @@
                                 </div>
                             </ng-container>
                         </div>
-
+<!-- 
                         <div class="form-group">
                             <label>Engineer Type<p class="p12">*</p></label>
                             <select class="form-control" formControlName="EngineerType" placeholder=" Choose Engineer">
@@ -92,7 +92,7 @@
                                     </div>
                                 </ng-container>
                             </div>
-                        </div>
+                        </div> -->
                         <div class="form-group">
                             <label>Date Of Joining<p class="p12">*</p></label>
                             <input type="text" class="form-control" formControlName="DateOfjoining"
