--- a/MyApp/src/app/component/SERVICE-ENGG/view-service-engineer/view-service-engineer.component.css
+++ b/MyApp/src/app/component/SERVICE-ENGG/view-service-engineer/view-service-engineer.component.css
@@ -5,8 +5,11 @@
 p{
     margin-left: 10px;
 }
-.row{
+/* .row{
     margin-left: 200px;
+} */
+#row1{
+    margin-left: 100px;
 }
 img{
     width: 130px;
