--- a/MyApp/src/app/component/CUSTOMERS/view-customer/view-customer.component.html
+++ b/MyApp/src/app/component/CUSTOMERS/view-customer/view-customer.component.html
@@ -7,9 +7,12 @@
                     <h1>{{iteam.u_name}} </h1>
                 </div>
                 <div class="card-body">
+                    <div class="row" id="row1">
                     <div class="col-md-4">
                         <img src="assets/Image/customer.png" alt="image">
                     </div>
+                </div>
+                <!-- <div class="row" id="row1"> -->
                     <div class="row">
                         <h6>Id:</h6>
                         <p>{{iteam.u_id}}</p>
@@ -66,6 +69,7 @@
                         <h6>Confirm Password:</h6>
                         <p>{{iteam.u_cpassword}}</p>
                     </div>
+                    <!-- </div> -->
                     <button class="btn btn-primary" (click)="back()"><i class="fa fa-arrow-left"></i>Back</button> 
                 </div>
             </div>
