--- a/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
+++ b/MyApp/src/app/component/service-engineer/accept-complaint/accept-complaint.component.html
@@ -88,7 +88,7 @@
                                 <label style="margin-top:12px"><b>Customer Name:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_name" class="form-control" id="engg_name" disabled>
+                                <input type="text" name="engg_name" [ngModel]="assignData.c_name" class="form-control" id="engg_name" disabled>
                             </div>
                         </div>
 
@@ -98,7 +98,7 @@
                                 <label style="margin-top:12px"><b>Mobile Number:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_name" class="form-control" id="engg_name" disabled>
+                                <input type="text" name="engg_name" [ngModel]="assignData.u_mobile" class="form-control" id="engg_name" disabled>
                             </div>
                         </div>
 
@@ -108,7 +108,7 @@
                                 <label style="margin-top:12px"><b>Alternative Mobile Number:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="engg_name" class="form-control" id="engg_name" disabled>
+                                <input type="text" name="engg_name" [ngModel]="assignData.u_altermobile" class="form-control" id="engg_name" disabled>
                             </div>
                         </div>
 
@@ -118,7 +118,7 @@
                                 <label style="margin-top:12px"><b>Email:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" class="form-control" id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.u_email" class="form-control" id="Email" disabled>
 
                             </div>
 
@@ -143,7 +143,7 @@
                                 <label style="margin-top:12px"><b>Complaint Date:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" class="form-control" id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.c_date" class="form-control" id="Email" disabled>
 
                             </div>
 
@@ -155,7 +155,7 @@
                                 <label style="margin-top:12px"><b>Photos:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" class="form-control" id="Email" disabled>
+                                <input type="text" name="Email" placeholder="N/A" class="form-control" id="Email" disabled>
 
                             </div>
 
@@ -167,7 +167,7 @@
                                 <label style="margin-top:12px"><b>Status:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email" class="form-control" id="Email" disabled>
+                                <input type="text" name="Email" [ngModel]="assignData.c_status" class="form-control" id="Email" disabled>
 
                             </div>
 
@@ -179,7 +179,7 @@
                                 <label style="margin-top:12px"><b>Comments:</b></label>
                             </div>
                             <div class="col-md-10">
-                                <input type="text" name="Email " class="form-control " id="Email ">
+                                <input type="text" name="comment " class="form-control " id="Email ">
 
                             </div>
 
@@ -200,7 +200,7 @@
                             </div>
 
                         </div>
-                        <button type="button " class="btn btn-primary btn-lg btn-block " style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important; " data-dismiss="modal " (click)="assignEngg(item) ">ADD DATA</button>
+                        <button type="button " class="btn btn-primary btn-lg btn-block " style="margin-top: 12px;padding-top: 2px !important;padding-bottom: 2px !important; " data-dismiss="modal " (click)="addData()">ADD DATA</button>
                     </div>
                 </div>
             </div>
