--- a/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.html
+++ b/MyApp/src/app/component/service-engineer/engg-header/engg-header.component.html
@@ -16,7 +16,7 @@
                         <i class="fas fa-chalkboard-teacher"></i>Accept Complaint</a>
                 </li>
                 <li class="nav-item">
-                    <a class="notification" id="a1" routerLink="app-view-previous-complaint" (click)="loader()"> <i class="far fa-clipboard"></i> View Privios Complaint</a>
+                    <a class="notification" id="a1" routerLink="app-engg-view-previous" (click)="loader()"> <i class="far fa-clipboard"></i> View Privios Complaint</a>
 
                 </li>
 
